--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
     position: sticky;
     top: 0;
     z-index: 999;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 }
 
 img {
@@ -44,7 +44,7 @@ img {
     text-align: center;
     padding: auto 100%;
     color: aliceblue;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 }
 
 .tour_list {
@@ -80,7 +80,7 @@ img {
 
 .simi_artists {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto;
     column-gap: 20px;
     row-gap: 20px;
     margin-top: 20px;
@@ -100,3 +100,33 @@ img {
     color: #fff;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+textarea,#scientistInput {
+    border: solid 1px grey;
+    border-radius: 10px;
+}
+
+.fav_artists {
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+a, button{
+    text-decoration: none;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: rgb(255, 229, 236);
+    font-size: 15pt;
+    padding: 5px;
+    margin: 10px;
+}
+button{
+    background-color: rgb(94, 127, 93);
+    border: 0;
+}
+.nav_links{
+    text-align: center;
+}
+
+button:hover {
+    background-color: rgb(47,22,21);
+}
+
